# Helios

./: .gitignore  AUDIT.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Claude.md  DEPLOYMENT_CHECKLIST.md  IMPLEMENTATION_STATUS_REPORT.md  ISSUES.md  LICENSE  NOTICE  OMNI_COMPLETE_IMPLEMENTATION_PROMPT.md  OMNI_FINAL_DELIVERY.md  OMNI_IMPLEMENTATION_GUIDE.md  OMNI_QUICK_REFERENCE.md  OMNI_README.md  OMNI_SELF_HOSTING_RELEASE_v2_EFFECTS.md  OMNI_SINGLE_SOURCE_OF_TRUTH.md  OMNI_SPECIFICATION_v1.md  OUTREACH_TEMPLATES.md  PHASE5_COMPLETION_REPORT.md  PHASE_3_AUDIT_COMPLETION_REPORT.md  PHASE_PLAN.md  README.md  ROADMAP.md  SECURITY.md  SELF_HOSTING_COMPLETE.md  SESSION_COMPLETION_REPORT_2026-04-01.md  SESSION_CONTEXT_2026_04_01.md  bootstrap.sh  extension_summary.csv  install.sh  large_files_scan.csv  main.omni  make_release.sh  omni.toml  repo_file_list.csv  repo_source_file_list.csv  session-opus.md  (+7 more)
.claude/: README.md  settings.json  settings.local.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labels.yml
app/: gui.omni
biometrics/: identity.omni
brain/: adaptive_learning.omni  adaptive_reasoning.rs  cognitive_cortex.omni  cognitive_inference.omni  knowledge_graph.omni  learning_framework.omni  memory_architecture.omni  reasoning_engine.omni  storage.omni  tokenizer.omni
compiler/: check_warnings.txt  properties.omni  test_simple.omni
config/: default.toml  loader.omni
core/: cuda.omni  http.omni  json.omni  lib.omni  logging.omni  math.omni  networking.omni  system.omni  threading.omni  toml.omni  voice.omni
docs/: COMPREHENSIVE_LONG_TERM_ROADMAP.md  CONVERSATION_MEMORY_2026_04_03.md  CONVERSATION_MEMORY_2026_04_13.md  EXHAUSTIVE_AUDIT_REPORT.md  HELIOS & Omni Language — Comprehensive.md  OMNI_LANGUAGE_REFERENCE.md  (+21 more)
omni-lang/compiler/: Cargo.toml  compiler_src_list.csv  dep_cleanup.py  errors.txt  fix_stubs.py  fix_stubs2.py  fix_stubs3.py  hello.omni  properties.omni  refactor_safe.py  run_tests.bat  stub_libs.py  test_examples.omni  test_simple.ovm  test_suggestion2.omni  test_without_git.bat
omni-lang/compiler/examples/: main_import.omni  main_import2.omni  main_import_direct.omni  main_standalone.omni  math.omni
omni-lang/compiler/src/: ast.rs  codegen.rs  diagnostics.rs  enhancements.rs  ir.rs  lexer.rs  lib.rs  main.rs  manifest.rs  modes.rs  monitor.rs  parser.rs  resolver.rs  security.rs  semantics.rs
omni-lang/compiler/src/brain/: adaptive_reasoning.rs  knowledge_graph.rs  memory.rs  mod.rs
omni-lang/compiler/src/codegen/: cognitive.rs  comprehensive_tests.rs  cpp_interop.rs  dwarf.rs  exception_handling.rs  gpu_advanced.rs  gpu_binary.rs  gpu_dispatch.rs  gpu_fusion.rs  gpu_hardware.rs  gpu_runtime.rs  gpu_tests.rs  jit.rs  jit_complete.rs  linker.rs  llvm_backend.rs  mlir.rs  mod.rs  native_codegen.rs  native_extended.rs  native_linker.rs  optimizer.rs  optimizing_jit.rs  ovm.rs  ovm_direct.rs  python_buffer.rs  python_interop.rs  self_hosting.rs
omni-lang/compiler/src/codegen/opt/: const_prop.rs  dce.rs  licm.rs  mod.rs  tests.rs
omni-lang/compiler/src/ir/: mod.rs
omni-lang/compiler/src/language_features/: variadics.rs
omni-lang/compiler/src/lexer/: mod.rs
omni-lang/compiler/src/mir/: lower.rs  mod.rs  place.rs  pretty.rs  rvalue.rs  statement.rs
omni-lang/compiler/src/optimizer/: constant_folding.rs  dead_code.rs  inlining.rs  mod.rs  simplify.rs
omni-lang/compiler/src/parser/: ast.rs  mod.rs
omni-lang/compiler/src/runtime/: bytecode.rs  bytecode_compiler.rs  distributed_logic.rs  gui.rs  hot_swap.rs  interpreter.rs  mod.rs  native.rs  network.rs  os.rs  profiler.rs  tests.rs  vm.rs
omni-lang/compiler/src/safety/: mod.rs  passes.rs
omni-lang/compiler/src/semantic/: advanced_types.rs  autograd.rs  borrow_check.rs  concurrency.rs  const_generics.rs  constraints.rs  edge_cases.rs  effects.rs  error_recovery.rs  exhaustive_phase_tests.rs  inference.rs  integration_example.rs  lifetimes.rs  linear.rs  mod.rs  monomorphization.rs  optimization.rs  performance.rs  phase8_effects.rs  phase9_concurrency.rs  phase_comprehensive_tests.rs  polonius.rs  properties.rs  tests.rs  traits.rs  type_inference.rs  types.rs
omni-lang/compiler/src/testing/: mod.rs
omni-lang/compiler/tests/ui/: polonius_regression.omni  polonius_stress.omni
omni-lang/tools/omni-dap/: Cargo.toml
omni-lang/tools/omni-dap/src/: main.rs  main_v0.rs
omni-lang/tools/omni-fmt/: Cargo.toml
omni-lang/tools/omni-fmt/src/: formatter.rs  main.rs
omni-lang/tools/omni-lsp/: Cargo.toml
omni-lang/tools/omni-lsp/src/: main.rs  main_v0.rs
omni-lang/tools/opm/: Cargo.toml
omni-lang/tools/opm/src/: advanced.rs  main.rs
(+467 files in other folders)
