[package]
name = "omnc"
version = "1.0.0"
edition = "2021"
authors = ["HELIOS Project"]
description = "Omni Language Compiler - A systems programming language for AI"
readme = "README.md"
license = "Apache-2.0"

[[bin]]
name = "omnc"
path = "src/main.rs"

[lib]
name = "omni_compiler"
path = "src/lib.rs"

[features]
default = ["ovm"]
ovm = []  # OVM bytecode interpreter (always available)
llvm = ["dep:inkwell"]  # Native code generation via LLVM
gpu = ["dep:cust", "dep:ocl", "dep:ash"] # GPU Backend support

[dependencies]
# GPU (Optional)
cust = { version = "0.3", optional = true }      # CUDA
ocl = { version = "0.19", optional = true }      # OpenCL
ash = { version = "0.37", optional = true }      # Vulkan

# Core
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"

# Parsing
logos = "0.13"           # Fast lexer generator
lalrpop-util = "0.20"    # Parser generator utilities

# CLI
clap = { version = "4.4", features = ["derive"] }

# Code generation (optional - requires LLVM 17 installed)
inkwell = { version = "0.4", features = ["llvm17-0"], optional = true }

# Data structures
indexmap = "2.1"
petgraph = "0.6"         # For control flow graphs

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Runtime Dependencies (New)
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
ndarray = "0.15"         # For Tensor math
rand = "0.8"             # For Math/Crypto
chrono = "0.4"           # For Time
uuid = { version = "1.4", features = ["v4"] }
num_cpus = "1.0"         # For std::sys
lazy_static = "1.4"      # For static initialization
hostname = "0.3"         # For system hostname
sys-info = "0.9"         # For system memory info
sysinfo = "0.29"         # For runtime monitoring of CPU/memory
libloading = "0.8"       # For dynamic GPU driver loading

[target.'cfg(unix)'.dependencies]
pprof = { version = "0.12", features = ["flamegraph"] }

[build-dependencies]
lalrpop = "0.20"         # Parser generator

[dev-dependencies]
criterion = "0.5"
pretty_assertions = "1.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
