[package]
name = "omni-dap"
version = "0.1.0"
edition = "2021"
description = "Omni Debug Adapter Protocol implementation"
authors = ["HELIOS Project"]

[[bin]]
name = "omni-dap"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
omnc = { path = "../../compiler" }
