[package]
name = "omni-fmt"
version = "0.1.0"
edition = "2024"
description = "Omni language code formatter"
authors = ["Helios Team"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
walkdir = "2.4"

[[bin]]
name = "omni-fmt"
path = "src/main.rs"
