[package]
name = "omni-lsp"
version = "0.1.0"
edition = "2021"
description = "Omni Language Server Protocol implementation"
authors = ["Omni Project"]

[[bin]]
name = "omni-lsp"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
omnc = { path = "../../compiler" }
