[package]
name = "opm"
version = "0.1.0"
edition = "2021"
description = "Omni Package Manager"
authors = ["Omni Project"]

[[bin]]
name = "opm"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
semver = "1"
serde_json = "1"
dirs = "5"
base64 = "0.22"
ed25519-dalek = "2"
sha2 = "0.10"
